# coupler-detector

./: README.md  pyproject.toml  requirements.txt
coupler_detector/: dataset.py  find_couplings  train.py
