[tool.poetry]
name = "coupler-detector"
version = "0.1.0"
description = "Train-car coupler/joint detecting model in pytorch"
authors = ["Martin Mokry <martin-kokos@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "coupler_detector"}]

[tool.poetry.dependencies]
python = "~3.11" # because torch.compile / Dynamo
torch = "^2.3.1"
torchvision = "^0.18.1"
tqdm = "^4.66.4"
structlog = "^24.2.0"
opencv-python = "^4.10.0.84"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
